# living-nft-engine

./: Cargo.toml  LICENSE  README.md  README_STELLAR.md  soroban-project.toml
contracts/living-nft-engine/: Cargo.toml
contracts/living-nft-engine/src/: lib.rs  test.rs
frontend/: package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.tsx  index.css  index.tsx
frontend/src/components/: Header.tsx  MintNFT.tsx  NFTGallery.tsx  OracleStatus.tsx  TraitBar.tsx  TraitVisualizer.tsx
frontend/src/contexts/: WalletContext.tsx
frontend/src/types/: index.ts
oracle/: Cargo.toml
oracle/src/: client.rs  lib.rs  main.rs  main_stellar.rs  stellar_client.rs  traits.rs  weather.rs
programs/living-nft-engine/: Cargo.toml
programs/living-nft-engine/src/: lib.rs
scripts/: deploy_stellar.sh  interact_stellar.sh
